--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
+    "@types/react": "^16.9.56",
     "codecov": "^3.8.1",
     "gh-pages": "^3.1.0",
     "react": "^17.0.1",
